--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -378,10 +378,10 @@ header.sticky #logo .logo_sticky{ display:block; }
 	width:160px;
 	height:34px;
 	display:block;
-	background-image:url(../img/logo.png);
+	background-image:url(../img/logo.JPG);
 	background-repeat:no-repeat;
 	background-position:left top;
-	background-size: 160px 34px;
+	background-size: 200px 40px;
 	text-indent:-9999px;
 }
 header.sticky #logo_home h1{
