--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -402,15 +402,15 @@ only screen and (-o-min-device-pixel-ratio: 2/1),
 only screen and (-webkit-min-device-pixel-ratio: 2),
 only screen and (min-device-pixel-ratio: 2) {
 #logo_home h1 a, header#colored #logo_home h1 a{
-    background-image: url(../img/logo_2x.png);
+    background-image:url(../img/bumoim-logo.png);
 	background-size: 160px 34px;
 }
 header.sticky #logo_home h1 a, header#plain #logo_home h1 a{
-    background-image: url(../img/logo_sticky_2x.png);
+    background-image:url(../img/bumoim-logo.png);
 	background-size: 160px 34px;
 }
 header.sticky#colored #logo_home h1 a{
-    background-image: url(../img/logo_sticky_colored_2x.png);
+    background-image:url(../img/bumoim-logo.png);
 	background-size: 160px 34px;
 }
 }
